--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
         <!-- Encabezado -->
         <div class="header">
             <img src="Images/Portada.webp" alt="Portada" class="cover-photo">
-            <img src="images/FotoPerfil.jpg" alt="Marco Flores" class="profile-img">
+            <img src="Images/FotoPerfil.jpg" alt="Marco Flores" class="profile-img">
             <h1>Marco Antonio Flores Anzurez</h1>
         </div>
 
